--- a/styles.css
+++ b/styles.css
@@ -11,10 +11,12 @@ body {
   font-family: "Inter", sans-serif;
   background: #000000;
   color: #ffffff;
+  overflow-x: hidden;
 }
 
 /* Header Styling */
 header {
+  max-width: 100vw;
   background-color: #282a36;
   color: #ffffff;
   padding-top: 16px;
@@ -22,21 +24,24 @@ header {
   padding-left: 24px;
   padding-right: 24px;
   text-align: center;
+  overflow-x: hidden;
 }
 
 .header-content {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
 
 .header-left {
+  text-align: center;
   display: flex;
   align-items: center;
 }
 
 .header-left h1 {
   margin: 0;
+  text-align: center;
   color: #ffffff;
   font-family: "Inter", sans-serif;
   font-weight: bold;
@@ -109,27 +114,23 @@ footer {
   color: #e87722;
 }
 
-/* .heroes-prize,
-.heroes-amount {
-  font-size: 32px;
-  color: #ffc72c;
-  margin-top: 10px;
-  margin-bottom: 10px;
-} */
-
 .heroes-description {
   font-size: 18px;
   line-height: 1.6;
   color: #ffffff;
 }
 
-/* Resources Section Styling */
 .resources {
+  max-width: 90vw;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px;
   padding: 20px;
   border-radius: 8px;
   background-color: #282a36;
   color: #ffffff;
-  text-align: center;
+  font-weight: 500;
+  /* text-align: center; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -149,11 +150,16 @@ footer {
 
 .resources li {
   margin-bottom: 10px;
-  color: #ff5555;
+  color: wheat;
 }
-
+a{
+  color: cornflowerblue;
+  text-decoration: none;
+  font-weight: 500;
+}
 .poster-image {
   width: 420px;
+  max-width: 90vw;
   height: auto;
   aspect-ratio: 905 / 1280;
   object-position: center;
